<resources>
    <string name="app_name">Trivia app</string>
    <string name="string_a">Roscosmos</string>
    <string name="string_b">NASA</string>
    <string name="string_c">ISRO</string>
    <string name="string_d">JAXA</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="d">D</string>
    <string name="c">C</string>
    <string name="question">1. Which space agency has decided to carry out first all female spacewalk at the international space station?</string>
</resources>