<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#040F2B"
    android:textAlignment="center"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/buttonA"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/string_a"
        android:textColor="@color/black"
        app:backgroundTint="#7ED8E1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question" />

    <Button
        android:id="@+id/buttonB"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/string_b"
        android:textColor="@color/black"
        app:backgroundTint="#7ED8E1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonA" />

    <Button
        android:id="@+id/buttonC"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/string_c"
        android:textColor="@color/black"
        app:backgroundTint="#7ED8E1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonB" />

    <Button
        android:id="@+id/buttonD"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/string_d"
        android:textColor="@color/black"
        app:backgroundTint="#7ED8E1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonC" />

    <TextView
        android:id="@+id/option_a"
        android:layout_width="50dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:background="@color/orange"
        android:gravity="center"
        android:text="@string/a"
        android:textColor="#FAFAFA"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="@+id/buttonA"
        app:layout_constraintTop_toTopOf="@+id/buttonA"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/option_b"
        android:layout_width="50dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:background="@color/orange"
        android:gravity="center"
        android:text="@string/b"
        android:textColor="#FAFAFA"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="@+id/buttonB"
        app:layout_constraintTop_toTopOf="@+id/buttonB"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/option_d"
        android:layout_width="50dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:background="@color/orange"
        android:gravity="center"
        android:text="@string/d"
        android:textColor="#FAFAFA"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="@+id/buttonD"
        app:layout_constraintTop_toTopOf="@+id/buttonD"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/option_c"
        android:layout_width="50dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:background="@color/orange"
        android:gravity="center"
        android:text="@string/c"
        android:textColor="#FAFAFA"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="@+id/buttonC"
        app:layout_constraintTop_toTopOf="@+id/buttonC"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/question"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:text="@string/question"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>